Bump javax.servlet-api to version 3.1.0